Bug 253143 - Do not add letter-spacing after zero-width format controls such as ZWSP. r=jwatt